--- a/slider.html
+++ b/slider.html
@@ -11,6 +11,7 @@
 
 <body>
     <photo-slider title="Wonders Of The World" author="Anonymous" photos="./photos/celsus-library-61082__340.jpg,./photos/egypt-481__340.webp,./photos/great-wall-of-china-2030311__340.webp,./photos/machu-picchu-43389__340.jpg,./photos/petra-5252171__340.jpg,./photos/stonehenge-2475079__340.webp,./photos/taj-mahal-383097__340.webp"></photo-slider>
+    <photo-slider title="Wonders Of The World" author="Anonymous" photos="./photos/celsus-library-61082__340.jpg,./photos/egypt-481__340.webp,./photos/great-wall-of-china-2030311__340.webp,./photos/machu-picchu-43389__340.jpg,./photos/petra-5252171__340.jpg,./photos/stonehenge-2475079__340.webp,./photos/taj-mahal-383097__340.webp"></photo-slider>
 
     <script src="./slider.js"></script>
 </body>
